--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
+spring.datasource.username=artemiy
+spring.datasource.password=LevArt1703
+external.api.clientSecret=0c7d95ae3ea14166b28afe9590e342c4
+external.api.clientId=312fcbf75f2f42b698469b7f593e3a38
+external.api.spotifyApiTokenUrl=https://accounts.spotify.com/api/token
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.show-sql: true
+
 
