--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
-spring.datasource.username=artemiy
-spring.datasource.password=LevArt1703
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:39380/railway
+spring.datasource.username=root
+spring.datasource.password=xODKqBDoVzlbLyrhSmUdVCZEtkjAYpLO
 external.api.clientSecret=0c7d95ae3ea14166b28afe9590e342c4
 external.api.clientId=312fcbf75f2f42b698469b7f593e3a38
 external.api.spotifyApiTokenUrl=https://accounts.spotify.com/api/token
